[project]
name = "echoserver-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)"
]

[tool.poetry]
packages = [{include = "echoserver_py", from = "src"}]


[tool.poetry.requires-plugins]
my-application-plugin = ">1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
